--- a/HotelApp.vcxproj
+++ b/HotelApp.vcxproj
@@ -129,16 +129,18 @@
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="HotelApp.cpp" />
+    <ClCompile Include="HotelManager.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Room.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h" />
+    <ClInclude Include="HotelManager.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Room.h" />
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="Client.xml" />
+    <None Include="clients.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
