--- a/HotelApp.vcxproj
+++ b/HotelApp.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,16 +132,20 @@
     <ClCompile Include="HotelApp.cpp" />
     <ClCompile Include="HotelManager.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Reservation.cpp" />
     <ClCompile Include="Room.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h" />
     <ClInclude Include="HotelManager.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Reservation.h" />
     <ClInclude Include="Room.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="clients.csv" />
+    <None Include="reservations.csv" />
+    <None Include="rooms.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
