--- a/HotelApp.vcxproj.filters
+++ b/HotelApp.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="Reservation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="clients.csv">
