--- a/HotelApp.vcxproj
+++ b/HotelApp.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="clients.csv" />
+    <None Include="ids.csv" />
     <None Include="reservations.csv" />
     <None Include="rooms.csv" />
   </ItemGroup>
