--- a/HotelApp.vcxproj
+++ b/HotelApp.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="HotelApp.cpp" />
     <ClCompile Include="HotelManager.cpp" />
     <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="Menus.cpp" />
+    <ClCompile Include="MenuOptions.cpp" />
     <ClCompile Include="Reservation.cpp" />
     <ClCompile Include="Room.cpp" />
   </ItemGroup>
@@ -141,7 +141,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="HotelManager.h" />
     <ClInclude Include="Menu.h" />
-    <ClInclude Include="Menus.h" />
+    <ClInclude Include="MenuOptions.h" />
     <ClInclude Include="Reservation.h" />
     <ClInclude Include="Room.h" />
   </ItemGroup>
